# OrchardDB

./: .gitignore  README.md  docker-compose.yml  start-dev.ps1  start-dev.sh
auth_service/: Dockerfile  requirements.txt  run.py
auth_service/app/: dependencies.py  main.py
auth_service/app/api/: api_routes.py  auth_routes.py
auth_service/app/core/: dependencies.py
auth_service/app/db/: postgres.py
auth_service/app/routes/: __init__.py  api_routes.py
auth_service/app/security/: utils.py
auth_service/app/services/: __init__.py  api_key_service.py  auth_service.py
backend/: .env.example  .gitignore  requirements.txt
backend/app/: chroma_manager.py  database.py  dependencies.py  main.py
backend/app/routes/: auth_routes.py  pdf_routes.py  vdb_routes.py  visualization_routes.py
client/: README.md  pyproject.toml
client/src/lunardb/: __init__.py  client.py
client/src/orcharddb/: __init__.py  client.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  VectorSpaceViewer.jsx  index.css
pdf_service/: .env.example  Dockerfile  app.py  chroma_manager.py  database.py  dependencies.py  requirements.txt  run.py
pdf_service/app/: main.py
pdf_service/routes/: pdf_routes.py
pdf_service/services/: pdf_service.py
pdf_worker_service/: .env.example  Dockerfile  requirements.txt  tasks.py
vdb_service/: .env.example  .gitignore  Dockerfile  requirements.txt
vdb_service/app/: main.py
visualisation_service/: .env.example  Dockerfile  requirements.txt  run.py
visualisation_service/app/: main.py
(+43 files in other folders)
